# crypto-rs

./: .gitignore  Cargo.toml
src/: dl_proof.rs  feldman.rs  field.rs  field_element.rs  lagrange.rs  lib.rs  point.rs  polynomial.rs  scalar.rs  schnorr.rs  secp256k1.rs  tagged_hash.rs
tests/: bip340.rs  test-vectors.csv
