[package]
name = "crypto-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.9.0"
ring = "0.17.14"
sha2 = "0.10.8"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.6.0"
secp256k1 = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
